--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
   wg-easy:
     environment:
     #  Optional:
-      - PORT=443
-      - HOST=0.0.0.0
+      # - PORT=443
+      # - HOST=0.0.0.0
       - INSECURE=false
 
     image: ghcr.io/wg-easy/wg-easy:15
