--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     #  Optional:
       # - PORT=443
       # - HOST=0.0.0.0
-      - INSECURE=true
+      # - INSECURE=true
 
     image: ghcr.io/wg-easy/wg-easy:15
     container_name: wg-easy
