--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,11 @@ volumes:
 
 services:
   wg-easy:
-    # environment:
+    environment:
     #  Optional:
       # - PORT=443
       # - HOST=0.0.0.0
-      # - INSECURE=true
+      - INSECURE=true
 
     image: ghcr.io/wg-easy/wg-easy:15
     container_name: wg-easy
